# PlanetEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  features.md  imgui.ini
doc/: Documentation.md
resources/shaders/: g_buffer_test.fs  g_buffer_test.vs  gbuffer_combine.fs  landscape_water_material.fs  planet_material.fs  planet_material.vs  planet_material_normal_display.fs  planet_material_normal_display.gs  planet_material_v2.fs  planet_material_v2.vs  post_process.fs  standard_material.fs  standard_material.vs  water_shader.fs  water_shader.vs
resources/shaders/compute/: planet_compute_normals.cs  planet_compute_position.cs  planet_fix_seams.cs
resources/shaders/libs/: atmosphere.cginc  atmosphere.shi  compute_base.cginc  deferred_input.cginc  deferred_output.cginc  deferred_output.shi  deferred_output_translucent.cginc  landscape.cginc  landscape.shi  lighting.cginc  maths.cginc  maths.shi  noise.cginc  noise.shi  planet_chunk_data.cginc  random.cginc  world_data.cginc
resources/shaders/post_process/: downsample_pass.fs  lighting.fs  post_process.fs  screen_space_reflections.fs  ssr_combine.fs  translucency_combine.fs  upsample_pass.fs
src/: camera.cpp  camera.h  default_camera_controller.cpp  default_camera_controller.h  main.cpp  renderer_setup.cpp  renderer_setup.h  world.cpp  world.h
src/engine/: asset_manager.cpp  asset_manager.h  engine.cpp  engine.h  renderer.cpp  renderer.h
src/geometry/: planet.cpp  planet.h
src/graphics/: camera.cpp  camera.h  compute_shader.cpp  compute_shader.h  cubemap_capture_pass.cpp  cubemap_capture_pass.h  draw_group.h  easycppogl_texture.cpp  easycppogl_texture.h  framegraph.cpp  framegraph.h  material.cpp  material.h  mesh.cpp  mesh.h  post_process_pass.cpp  post_process_pass.h  primitives.cpp  primitives.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  shader_source.cpp  shader_source.h  storage_buffer.cpp  storage_buffer.h  texture_cube.cpp  texture_cube.h  texture_image.cpp  texture_image.h  uniform_buffer.cpp  uniform_buffer.h
src/planets_v1/: Planet_V1.cpp  Planet_V1.h  planet.cpp  planet.h
src/planets_v2/: planet_v2.cpp  planet_v2.h
src/ui/: asset_manager_ui.cpp  asset_manager_ui.h  graphic_debugger.cpp  graphic_debugger.h  info_ui.cpp  info_ui.h  session_frontend.cpp  session_frontend.h  texture_viewer.cpp  texture_viewer.h  ui.cpp  ui.h  viewport.cpp  viewport.h  widgets.cpp  widgets.h  world_outliner.cpp  world_outliner.h
src/utils/: event_manager.h  game_settings.cpp  game_settings.h  gl_tools.h  maths.h  profiler.cpp  profiler.h
src/world/: cubemap_component.cpp  cubemap_component.h  mesh_component.cpp  mesh_component.h  planet.cpp  planet.h  planet_chunk.cpp  planet_chunk.h  planet_ocean.cpp  planet_ocean.h  scene_component.cpp  scene_component.h  world.cpp  world.h
